Added Normalize.css and script.js, linked them in index.html

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Orange Attack!</title>
-		<link rel="stylesheet" href="">
-		<script></script>
+		<link rel="stylesheet" href="css/normalize.css">
+		<script src="script.js"></script>
 	</head>
 	
 	<body>
